2011-10-30  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: enhancement: Added "ogv" to the list of known file
	extensions for "Ogg/OGM audio/video files". Implements bug 667.

	* mmg: bug fix: A utility function for breaking a line into
	multiple ones was accessing invalid memory in rare situations
	causing mmg to crash. Could happen e.g. when adding a job to the
	job queue.

2011-10-24  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: mkvmerge will use DTS instead of PTS for VC1
	video tracks read from MPEG transport streams.

2011-10-23  Moritz Bunkus  <moritz@bunkus.org>

	* build system: Boost's "Range" library is now required.

	* build system: Boost v1.46.0 or newer is now required. As a
	consequence included copies of some of Boost's libraries have been
	removed (foreach, property tree).

	* build system: The C++ compiler must now support several features
	of the C++11 standard: initializer lists, range-based 'for' loops,
	right angle brackets, the 'auto' keyword and lambda
	functions. configure checks for each of these. For GCC this means
	at least v4.6.0.

2011-10-22  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed reading MPEG transport streams on big
	endian systems.

	* mkvmerge: enhancement: Added support for reading AAC tracks from
	MPEG transport streams.

2011-10-17  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Relaxed the compatibility checks when
	concatenating VP8 video tracks.

2011-10-16  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed PCM audio in WAV sometimes being
	detected as DTS.

	* mkvmerge: enhancement: The verbose identification mode will add
	the properties "default_duration", "audio_sampling_frequency" and
	"audio_channels" if appropriate and if the corresponding header
	elements are present.

2011-10-13  Moritz Bunkus  <moritz@bunkus.org>

	* Packaging: In v5.0.1 mmg's guide was accidentally moved into the
	"mkvtoolnix" Debian/Ubuntu package. It has been moved back into