@@ -166,3 +166,4 @@ T_317ui_locale_zh_TW:af26160704aa699ca03270813855ec7d-836878bf8118c2b708d4fcadd8
 T_318ui_locale_invalid:ok:passed:20111016-192531:0.044292216
 T_319wav_with_pcm_detected_as_dts:eb7f2acc6f008c40d13f068e911ce9c0:passed:20111016-224416:0.071996925
 T_320ts_aac:944f2c43d87fda3835794febf9cf322c:passed:20111022-140411:0.553926447
+T_321vc1_without_markers:f901d75373b71650aa5f15d663ad547a:passed:20111104-003839:1.372064437
